First elements of Game of life ready.(Constructor, createBoard function)

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ body {
     background-color: #ffffff;
     float: left;
 }
+#board div:hover {
+    cursor: pointer;
+}
 
 #board div.live {
     background-color: #000000;
